--- a/gestione-libri/src/main/resources/templates/homepage.html
+++ b/gestione-libri/src/main/resources/templates/homepage.html
@@ -28,7 +28,7 @@
 </form>
 <form action="#" th:action="@{/registrazione}" class="col-lg-6 offset-lg-3 ">
 <button type="submit" name="azione" value="registrazione" class="btn btn-link">Non sei ancora registrato? Registrati</button>
-<button type="submit" name="azione" value="admin" class="btn btn-link">Entra come amministratore</button>
+<button type="submit" name="azione" value="vediLibri" class="btn btn-link">Vedi Libri</button>
 </form>
 
 
