--- a/gestione-libri/src/main/resources/templates/registrazione.html
+++ b/gestione-libri/src/main/resources/templates/registrazione.html
@@ -42,7 +42,14 @@
                             class="validation-message"></label>
                     </div>
                 </div>
-
+           <div class="form-group">
+        <div class="col-sm-9">
+                <input type="radio" th:name="ruolo" th:value="Admin" />
+                <label  th:text="Admin"></label>
+                 <input type="radio" th:name="ruolo" th:value="Utente" />
+                <label  th:text="Utente"></label>
+                </div>
+                </div>
                 <div class="form-group">
                     <div class="col-sm-9">
                         <button type="submit" class="btn btn-primary btn-block">Register User</button>
